--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -20,7 +20,7 @@
                 </ul>
 
 
-                    <a href="#" class="navbar__button">
+                    <a href="#" class="navbar__button button">
                         Оrder now
                         <img src="../img/rigth.svg" alt="svg">
                     </a>
