--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <main>
                  <!-- content -->
         @@include('./html/_content.html')
+        @@include('./html/_modal.html')
     </main>
 
     <!-- Footer -->
