--- a/src/html/_content.html
+++ b/src/html/_content.html
@@ -120,7 +120,7 @@
             </div>
         </div>
 
-        <div class="swiper-pagination"></div>
+        <div class="swiper-pagination swiper-pagination7"></div>
 
 
 
