--- a/src/html/_content.html
+++ b/src/html/_content.html
@@ -135,10 +135,10 @@
             <p class="products__header-title section__title">products</p>
 
 
-            <div class="products__header-item">
+            <a href="#" class="products__header-item">
                 <img src="../img/rigth__line.svg" alt="svg">
                 <p class="products__header-item-subtitle">Our proprietary grow room designs and building</p>
-            </div>
+            </a>
 
         </div>
 
